<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">JourneyLog</string>
    <string name="todo">TODO</string>
    <string name="fuel_type_LPG">LPG</string>
    <string name="fuel_type_diesel">Dizel</string>
    <string name="fuel_type_gasoline">Benzin</string>
    <string name="add_fuel_purchase_liter_price">Alış fiyatı</string>
    <string name="add_fuel_purchase_liter">Alınan litre</string>
    <string name="add_fuel_purchase_tax">KDV</string>
    <string name="add_fuel_purchase_total">Toplam</string>
    <string name="add_fuel_purchase_save_receipt">Kaydet</string>
    <string name="add_fuel_purchase_fuel_type">Akaryakıt türü</string>
    <string name="add_fuel_purchase_station">İstasyon</string>
    <string name="login_email">Email</string>
    <string name="login_password">Şifre</string>
    <string name="login_with_email_button_text">Email ile giriş yap</string>
    <string name="login_with_google_button_text">Google ile giriş yap</string>
    <string name="login_register_text">Henüz bir hesabın yok mu? <b>Kayıt ol</b></string>
    <string name="register_password_hint">Şifre</string>
    <string name="register_register_button_text">Kayıt ol</string>
    <string name="register_login_text">Zaten bir hesabın var mı? <b>Giriş yap</b></string>
    <string name="register_email_hint">Email</string>
    <string name="bottom_navigation_home_title">Ana sayfa</string>
    <string name="bottom_navigation_purchase_fuel_title">Yakıt alımlarım</string>
    <string name="bottom_navigation_journey_title">Yolculuklarım</string>
    <string name="register_name_hint">Ad</string>
    <string name="register_lastname_hint">Soyad</string>
    <string name="remember_me_text">Beni hatırla</string>
    <string name="forgot_password_text">Şifrenizi mi unuttunuz?</string>
    <string name="welcome_title_text">Hoş geldiniz</string>
    <string name="last_journey_title_text">Son yolculuğum</string>
    <string name="default_web_client_id">892926815505-2nspplf6ni3hkbpntjp8jc8tg95ad6d2.apps.googleusercontent.com</string>
    <string name="bottom_navigation_profile_title">Profil</string>
    <string name="forgot_password_email_hint">Email</string>
    <string name="forgot_password_send_button_text">Gönder</string>
    <string name="forgot_password_title_text">Şifrenizi mi unuttunuz?</string>
    <string name="update_password_old_password_hint">Eski şifre</string>
    <string name="update_password_new_password_hint">Yeni şifre</string>
    <string name="update_password_new_password_confirm_hint">Yeni şifre tekrar</string>
    <string name="update_password_confirm_button_text">Onayla</string>
    <string name="profile_logout_button_text">Çıkış yap</string>
    <string name="profile_app_settings_button_text">Uygulama ayarları</string>
    <string name="profile_password_settings_button_text">Şifre ayarları</string>
    <string name="profile_edit_profile_button_text">Profili düzenle</string>
    <string name="update_update_button_text">Güncelle</string>
    <string name="liters_taken"> %s L</string>
    <string name="total_price" tools:ignore="UnusedResources">%s ₺</string>
    <string name="fuel_liter_price">%s ₺</string>
    <string name="dialog_add_fuel_purchase_title">Uyarı</string>
    <string name="dialog_add_fuel_purchase_message">Bu bilgileri kaydetmek istediğinize emin misiniz?</string>
    <string name="dialog_add_fuel_purchase_positive_button_text">Evet</string>
    <string name="dialog_add_fuel_purchase_negative_button_text">Hayır</string>
    <string name="dialog_select_picture_title">Fotoğraf seçimi</string>
    <string name="dialog_select_picture_message">Lütfen fotoğraf seçimi için birini seçiniz</string>
    <string name="dialog_select_picture_positive_button_text">Kamera ile çek</string>
    <string name="dialog_select_picture_negative_button_text">Galeriden al</string>
    <string name="dialog_forgot_password_title">Şifre sıfırlama</string>
    <string name="dialog_forgot_password_message">Şifrenizi sıfırlamak istediğinize emin misiniz?</string>
    <string name="dialog_forgot_password_positive_button_text">Sıfırla</string>
    <string name="dialog_forgot_password_negative_button_text">İptal</string>
    <string name="dialog_logout_title">Çıkış yap</string>
    <string name="dialog_logout_message">Hesabınızdan çıkış yapmak istediğinize emin misiniz?</string>
    <string name="dialog_logout_positive_button_text">Çıkış yap</string>
    <string name="dialog_logout_negative_button_text">İptal</string>
    <string name="dialog_change_password_title">Şifre değiştirme</string>
    <string name="dialog_change_password_message">Şifrenizi değiştirmek istediğinize emin misiniz?</string>
    <string name="dialog_change_password_positive_button_text">Onayla</string>
    <string name="dialog_change_password_negative_button_text">İptal</string>
    <string name="dialog_camera_permission_title">İzin gerekli</string>
    <string name="dialog_camera_permission_message">Kameraya erişim izni uygulama ayarlarından manuel olarak etkinleştirilmelidir.</string>
    <string name="dialog_camera_permission_positive_button_text">Ayarlar</string>
    <string name="dialog_camera_permission_negative_button_text">İptal</string>
    <string name="dialog_gallery_permission_title">İzin gerekli</string>
    <string name="dialog_gallery_permission_message">Galeriye erişim izni uygulama ayarlarından manuel olarak etkinleştirilmelidir.</string>
    <string name="dialog_gallery_permission_positive_button_text">Ayarlar</string>
    <string name="dialog_gallery_permission_negative_button_text">İptal</string>
    <string name="dialog_save_vehicle_title">Araç kaydı</string>
    <string name="dialog_save_vehicle_message">Bu aracı kaydetmek istediğinizden emin misiniz?</string>
    <string name="dialog_save_vehicle_positive_button_text">Kaydet</string>
    <string name="dialog_save_vehicle_negative_button_text">İptal</string>
    <string name="dialog_update_vehicle_title">Araç güncelleme</string>
    <string name="dialog_update_vehicle_message">Bu aracı güncellemek istediğinizden emin misiniz?</string>
    <string name="dialog_update_vehicle_positive_button_text">Güncelle</string>
    <string name="dialog_update_vehicle_negative_button_text">İptal</string>
    <string name="warning_please_select_company">Lütfen bir şirket seçin</string>
    <string name="warning_please_fill_all_fields">Lütfen tüm alanları doldurun</string>
    <string name="warning_please_enter_email">Lütfen email adresinizi giriniz</string>
    <string name="warning_logout_message">Çıkmak için tekrar basın</string>
    <string name="warning_old_password_not_empty_message">Eski şifre boş bırakılamaz</string>
    <string name="warning_new_password_not_empty_message">Yeni şifre boş bırakılamaz</string>
    <string name="warning_new_password_confirm_not_empty_message">Yeni şifre onay boş bırakılamaz</string>
    <string name="warning_old_password_must_6_character_message">Eski şifre en az 6 karakter olmalıdır</string>
    <string name="warning_new_password_must_6_character_message">Yeni şifre en az 6 karakter olmalıdır</string>
    <string name="warning_new_confirm_password_must_6_character_message">Yeni şifre onay en az 6 karakter olmalıdır</string>
    <string name="warning_passwords_must_be_same_message">Şifreler aynı olmalıdır</string>
    <string name="warning_camera_permission_required_message">Kamera izni gereklidir</string>
    <string name="warning_gallery_permission_required_message">Galeri izni gereklidir</string>
    <string name="warning_please_create_vehicle">Henüz bir araç oluşturulmamış.<b>Lütfen bir araç oluştur</b></string>
    <string name="warning_receipt_id_not_empty_message">ID alınamadı</string>
    <string name="warning_receipt_email_not_empty_message">Email alınamadı</string>
    <string name="warning_receipt_station_name_not_empty_message">İstasyon seçiniz</string>
    <string name="warning_receipt_fuel_type_empty_message">Yakıt türü seçiniz</string>
    <string name="warning_receipt_liter_price_empty_message">Litre fiyatı giriniz</string>
    <string name="warning_receipt_liter_empty_message">Litre giriniz</string>
    <string name="warning_receipt_vehicle_license_plate_message">Aracınızın plakasını seçiniz</string>
    <string name="warning_receipt_vehicle_last_km_message">Aracınızın son kilometresini giriniz</string>
    <string name="warning_receipt_tax_empty_message">Vergi hesaplanamadı</string>
    <string name="warning_receipt_total_empty_message">Toplam tutar hesaplanamadı</string>
    <string name="warning_receipt_date_empty_message">Tarih alınamadı</string>
    <string name="warning_receipt_time_empty_message">Saat alınamadı</string>
    <string name="validation_message_empty_name">İsim giriniz</string>
    <string name="validation_message_empty_surname">Soyad giriniz</string>
    <string name="validation_message_empty_email">Email giriniz</string>
    <string name="validation_message_empty_password">Şifre giriniz</string>
    <string name="validation_message_valid_email">Geçerli bir email giriniz</string>
    <string name="profile_my_vehicles_button_text">Araçlarım</string>
    <string name="validation_message_empty_license_plate">Lütfen bir plaka giriniz</string>
    <string name="validation_message_empty_distance">Lütfen gidilecek mesafeyi giriniz</string>
    <string name="validation_message_valid_license_plate">Lütfen geçerli bir plaka giriniz</string>
    <string name="validation_message_empty_vehicle">Lütfen bir araç tipi seçiniz"</string>
    <string name="validation_message_empty_vehicle_last_km">Araç kilometresini giriniz"</string>
    <string name="validation_message_empty_fuel_type">Lütfen bir yakıt türü seçiniz</string>
    <string name="validation_message_empty_per_100_kilometer_fuel">Lütfen yakıt tüketimini giriniz</string>
    <string name="validation_message_enter_only_number">Lütfen sadece sayı giriniz</string>
    <string name="vehicle_select_vehicle_select_title">Araç tipi seçiniz</string>
    <string name="vehicle_select_vehicle_section_title">Araç \nBilgisi</string>
    <string name="vehicle_select_license_plate_title">Plaka giriniz</string>
    <string name="vehicle_select_fuel_type_title">Yakıt türü giriniz</string>
    <string name="vehicle_select_fuel_section_title">Yakıt \nBilgisi</string>
    <string name="vehicle_select_license_plate_info">Plakayı girerken boşluk koymayı unutmayın</string>
    <string name="vehicle_select_license_plate_country">TR</string>
    <string name="vehicle_select_create_button_text">Aracı oluştur</string>
    <string name="fuel_purchase_total_price_title">Toplam</string>
    <string name="fuel_purchase_date_title">Tarih</string>
    <string name="fuel_purchase_liter_taken_title">Alınan litre</string>
    <string name="warning_empty_list">Henüz bir kayıt yapılmadı</string>
    <string name="item_fuel_purchase_view_button_text">Görüntüle</string>
    <string name="fuel_purchase_add_payment_card_title">Ödeme Bilgileri Giriniz</string>
    <string name="fuel_purchase_add_fuel_card_title">Yakıt Bilgileri Giriniz</string>
    <string name="fuel_purchase_add_vehicle_card_title">Araç Bilgileri Giriniz</string>
    <string name="fuel_purchase_add_vehicle_km_title">Araç kilometre</string>
    <string name="fuel_purchase_add_license_plate_title">Plaka</string>
    <string name="fuel_purchase_add_fuel_indicator_title">Yakıt bilgileri</string>
    <string name="fuel_purchase_add_vehicle_indicator_title">Araç bilgileri</string>
    <string name="fuel_purchase_add_payment_indicator_title">Ödeme bilgileri</string>
    <string name="fuel_purchase_add_forward_vehicle_button_text">İlerle</string>
    <string name="fuel_purchase_add_forward_payment_button_text">İlerle</string>
    <string name="fuel_purchase_add_save_receipt_button_text">Kaydet</string>
    <string name="fuel_purchase_add_confirm_receipt_button_text">Onayla</string>
</resources>