<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8FA"
    android:padding="16dp"
    tools:context=".presentation.ui.fuelPurchaseAdd.FuelPurchaseAddFragment">

    <LinearLayout
        android:id="@+id/indicatorTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toStartOf="@+id/successfulIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/fuelInfoIndicatorTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/fuel_purchase_add_fuel_indicator_title"
            android:textColor="#3F51B5"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/vehicleInfoIndicatorTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/fuel_purchase_add_vehicle_indicator_title"
            android:textColor="#A0A0A0"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/paymentInfoIndicatorTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:text="@string/fuel_purchase_add_payment_indicator_title"
            android:textColor="#A0A0A0"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stepIndicator"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toStartOf="@+id/successfulIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/indicatorTitle"
        tools:layout_editor_absoluteX="16dp">

        <View
            android:id="@+id/fuelIndicator"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/step_indicator_style" />

        <View
            android:id="@+id/vehicleIndicator"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/step_indicator_style" />

        <View
            android:id="@+id/paymentIndicator"
            android:layout_width="0dp"
            android:layout_height="5dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/step_indicator_style" />
    </LinearLayout>

    <ImageView
        android:id="@+id/successfulIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:padding="2dp"
        android:src="@drawable/ic_successful"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/fuelCard"
        style="@style/CardViewMain"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stepIndicator">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/fuelCardTitle"
                style="@style/CardViewMainTitle"
                android:layout_marginStart="0dp"
                android:text="@string/fuel_purchase_add_fuel_card_title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/receiptStationTitle"
                style="@style/CardViewSubTitle"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_fuel_purchase_station"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fuelCardTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/receiptStationLayout"
                style="@style/TextInputLayoutExposedDropdownStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptStationTitle">

                <AutoCompleteTextView
                    android:id="@+id/receiptStation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/receiptPurchasedFuelTypeTitle"
                style="@style/CardViewSubTitle"
                android:text="@string/add_fuel_purchase_fuel_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptStationLayout" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/receiptPurchasedFuelType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptPurchasedFuelTypeTitle"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/gasoline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/fuel_type_gasoline"
                    app:checkedIconEnabled="true"
                    app:chipStrokeWidth="0.5dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/diesel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/fuel_type_diesel"
                    app:checkedIconEnabled="true"
                    app:chipStrokeWidth="0.5dp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/lpg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checkable="true"
                    android:text="@string/fuel_type_LPG"
                    app:checkedIconEnabled="true"
                    app:chipStrokeWidth="0.5dp" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/receiptLiterPriceTitle"
                style="@style/CardViewSubTitle"
                android:layout_width="0dp"
                android:text="@string/add_fuel_purchase_liter_price"
                app:layout_constraintEnd_toStartOf="@+id/receiptPurchaseLiterTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptPurchasedFuelType" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/receiptLiterPriceLayout"
                style="@style/TextInputLayoutOutlinedBoxStyle"
                android:layout_width="0dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/receiptPurchaseLiterLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptLiterPriceTitle">

                <EditText
                    android:id="@+id/receiptLiterPrice"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/receiptPurchaseLiterTitle"
                style="@style/CardViewSubTitle"
                android:layout_width="0dp"
                android:text="@string/add_fuel_purchase_liter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/receiptLiterPriceTitle"
                app:layout_constraintTop_toBottomOf="@+id/receiptPurchasedFuelType" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/receiptPurchaseLiterLayout"
                style="@style/TextInputLayoutOutlinedBoxStyle"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/receiptLiterPriceTitle"
                app:layout_constraintTop_toBottomOf="@+id/receiptPurchaseLiterTitle">

                <EditText
                    android:id="@+id/receiptPurchaseLiter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forwardVehicleInfo"
                style="@style/ButtonStyle"
                android:text="@string/fuel_purchase_add_forward_vehicle_button_text"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptLiterPriceLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/vehicleCard"
        style="@style/CardViewMain"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fuelCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/vehicleCardTitle"
                style="@style/CardViewMainTitle"
                android:layout_marginStart="0dp"
                android:text="@string/fuel_purchase_add_vehicle_card_title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/createVehicle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/warning_please_create_vehicle"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicleCardTitle" />

            <TextView
                android:id="@+id/vehicleLicensePlateTitle"
                style="@style/CardViewSubTitle"
                android:text="@string/fuel_purchase_add_license_plate_title"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createVehicle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/licensePlateLayout"
                style="@style/TextInputLayoutExposedDropdownStyle"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicleLicensePlateTitle">

                <AutoCompleteTextView
                    android:id="@+id/licensePlate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/vehicleKmTitle"
                style="@style/CardViewSubTitle"
                android:text="@string/fuel_purchase_add_vehicle_km_title"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/licensePlateLayout" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleKmLayout"
                style="@style/TextInputLayoutOutlinedBoxStyle"
                android:layout_width="0dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/vehicleKmTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicleKmTitle">

                <EditText
                    android:id="@+id/vehicleKm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    tools:ignore="LabelFor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/forwardPaymentInfo"
                style="@style/ButtonStyle"
                android:text="@string/fuel_purchase_add_forward_payment_button_text"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vehicleKmLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/paymentCard"
        style="@style/CardViewMain"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vehicleCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/paymentCardTitle"
                style="@style/CardViewMainTitle"
                android:layout_marginStart="0dp"
                android:text="@string/fuel_purchase_add_payment_card_title"
                android:textSize="22sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/receiptTotalTaxTitle"
                style="@style/CardViewSubTitle"
                android:text="@string/add_fuel_purchase_tax"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/paymentCardTitle" />

            <TextView
                android:id="@+id/receiptTotalTax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptTotalTaxTitle"
                tools:text="170TL" />

            <TextView
                android:id="@+id/receiptTotalPriceTitle"
                style="@style/CardViewSubTitle"
                android:text="@string/add_fuel_purchase_total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptTotalTax" />

            <TextView
                android:id="@+id/receiptTotalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptTotalPriceTitle"
                tools:text="3500TL" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/confirmReceipt"
                style="@style/ButtonStyle"
                android:text="@string/fuel_purchase_add_confirm_receipt_button_text"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/receiptTotalPrice" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/receiptSave"
                style="@style/ButtonStyle"
                android:text="@string/fuel_purchase_add_save_receipt_button_text"
                android:visibility="gone"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/confirmReceipt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
